--- a/Plus-Weather-App/src/index.css
+++ b/Plus-Weather-App/src/index.css
@@ -30,7 +30,7 @@
 .city-info {
   background: turquoise;
   padding-left: 4%;
-  max-width: 20%;
+  max-width: 30%;
   padding-top: 5%;
   padding-bottom: 5%;
   border-radius: 20px;
@@ -74,6 +74,10 @@
   border-radius: 20px;
   line-height: 10mm;
   margin-right: 15%;
+}
+
+#weather-description {
+  text-transform: capitalize;
 }
 
 ul {
