--- a/Plus-Weather-App/src/index.css
+++ b/Plus-Weather-App/src/index.css
@@ -1,11 +1,12 @@
 .float {
   display: block;
-  background: #d2eaf4;
+  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   padding: 80px;
   max-width: 70%;
   margin-top: 5%;
   margin-right: 15%;
   margin-left: 15%;
+  margin-bottom: 40px;
   border-radius: 25px;
   font-family: "Montserrat", sans-serif;
 }
@@ -27,62 +28,75 @@
   border-width: 1px;
 }
 
-.city-info {
-  background: turquoise;
+.city-time {
+  background: #defcf9;
   padding-left: 4%;
-  max-width: 30%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  max-width: 80%;
+  padding-top: 15%;
+  padding-bottom: 15%;
   border-radius: 20px;
+  margin-top: 50px;
 }
 
 .current-city {
   font-weight: bold;
-  font-size: 30px;
-  display: inline-block;
-  padding: 2% 4%;
-  background: violet;
-  margin: 0 auto;
+  font-size: 42px;
+  padding: 8% 10%;
+  margin-bottom: 5px;
+}
+
+.icon-temp {
+  background: #c3bef0;
+  max-width: 80%;
+  border-radius: 20px;
+  line-height: 10mm;
+  margin-top: 30px;
+  font-size: 18px;
+  margin-bottom: -150px;
 }
 
 .date-time {
-  background: green;
-  padding-left: 4%;
-  padding-right: 4%;
-  margin-right: 30%;
+  padding-left: 10%;
+  padding-right: 2%;
+  padding-top: 0%;
+  padding-bottom: 6%;
+  margin-top: 5px;
+  margin-right: 15px;
+  font-size: 18px;
 }
 
 .current-weather {
   display: inline-block;
   padding: 2% 4%;
   vertical-align: middle;
-  background: hotpink;
-  margin: 0;
-}
-
-#sun {
-  font-size: 58px;
-  color: orange;
-  text-align: right;
-  background: salmon;
-  margin-left: 50%;
+  margin-left: 15px;
+  margin-bottom: 15px;
 }
 
 .weather-conditions {
-  background: purple;
-  max-width: 25%;
+  background: #f6ecbf;
+  max-width: 45%;
   border-radius: 20px;
   line-height: 10mm;
   margin-right: 15%;
+  margin-top: -100px;
+  margin-left: 53%;
 }
 
 #weather-description {
   text-transform: capitalize;
 }
 
+.search-button {
+  background: #79d1c3;
+}
+
+:hover.search-button {
+  background: #c9fdd7;
+}
+
 ul {
-  display: inline-block;
-  margin-left: 5%;
-  padding-left: 5%;
   list-style: none;
+  padding-bottom: 5%;
+  padding-top: 5%;
 }
