--- a/Plus-Weather-App/src/index.css
+++ b/Plus-Weather-App/src/index.css
@@ -6,7 +6,6 @@
   margin-top: 5%;
   margin-right: 15%;
   margin-left: 15%;
-  margin-bottom: 40px;
   border-radius: 25px;
   font-family: "Montserrat", sans-serif;
 }
@@ -51,7 +50,6 @@
   border-radius: 20px;
   line-height: 10mm;
   margin-top: 30px;
-  font-size: 18px;
   margin-bottom: -150px;
 }
 
@@ -66,6 +64,8 @@
 }
 
 .current-weather {
+  font-size: 22px;
+  font-weight: 500;
   display: inline-block;
   padding: 2% 4%;
   vertical-align: middle;
@@ -85,14 +85,27 @@
 
 #weather-description {
   text-transform: capitalize;
+  font-size: 16px;
 }
 
 .search-button {
-  background: #79d1c3;
+  background: #c9fdd7;
 }
 
 :hover.search-button {
-  background: #c9fdd7;
+  background: #79d1c3;
+}
+
+.byme {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 15%;
+  margin-left: 19%;
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: 40px;
+  text-align: left;
 }
 
 ul {
