--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
 }
 
 .weather-conditions {
-  background: #f6ecbf;
+  background: #e0ffcd;
   max-width: 45%;
   border-radius: 20px;
   line-height: 10mm;
@@ -126,4 +126,28 @@ ul {
   list-style: none;
   padding-bottom: 5%;
   padding-top: 5%;
+}
+
+.weather-forecast {
+  background: #fff4e1;
+  border-radius: 20px;
+  margin-top: 3%;
+  padding: 4% 6%;
+  text-align: center;
+}
+
+.day {
+  font-size: 14px;
+  margin-bottom: -5%;
+}
+
+.forecast-temperature {
+  font-size: 14px;
+  margin-top: -5%;
+  padding-top: 0;
+}
+
+.forecast-temp-min {
+  color: gray;
+  padding-left: 10%;
 }
